<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeActivity">
    <group>
        <item
            android:id="@+id/action_logout"
            android:contentDescription="More options"
            android:visible="true"
            app:showAsAction="never"
            android:title="@string/go_home"></item>
    </group>
</menu>